Updated connection string

--- a/connections/connection_orders.yml
+++ b/connections/connection_orders.yml
@@ -2,5 +2,5 @@ unique_name: connection_orders
 object_type: connection
 label: connection_orders
 as_connection: Databricks
-database: samples
+database: dataTeam-catalog-gold-uat
 schema: tpch
